refacter code